--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 </head>
 <body>
     <main id="app"></main>
+    <script src="./js/pwa.js" data-default="true"></script>
     <script src="./js/handle-scroll.js" data-default="true"></script>
     <script type="module" src="./router.js" data-default="true"></script>
     <script src="./js/main.js" data-default="true"></script>
