--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script type="module" src="./router.js" data-default="true"></script>
     <script src="./js/main.js" data-default="true"></script>
     <script src="./js/pwa.js" data-default="true"></script>
-    <script>
+    <script data-default="true">
         let installEvent = null;
         let installButton = document.getElementById("install")
         document.getElementById("install").style.display = "none"
