--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="./assets/css/loader.css" data-default=true>
 </head>
 <body>
+    <button id="install" class="button">Download</button>
     <main id="app"></main>
     <script src="./js/handle-scroll.js" data-default="true"></script>
     <script type="module" src="./router.js" data-default="true"></script>
