--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
     <meta name="author" content="Alex Timoncini">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="manifest" href="./manifest.json">
-    <link rel="apple-touch-icon" sizes="32x32" href="./assets/images/ios/32.png">
-    <link rel="apple-touch-icon" sizes="58x58" href="./assets/images/ios/58.png">
-    <link rel="apple-touch-icon" sizes="64x64" href="./assets/images/ios/64.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./assets/images/ios/76.png">
-    <link rel="apple-touch-icon" sizes="80x80" href="./assets/images/ios/80.png">
-    <link rel="apple-touch-icon" sizes="87x87" href="./assets/images/ios/87.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./assets/images/ios/114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./assets/images/ios/120.png">
-    <link rel="apple-touch-icon" sizes="128x128" href="./assets/images/ios/128.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./assets/images/ios/152.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="./assets/images/ios/167.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/ios/180.png">
-    <link rel="apple-touch-icon" sizes="256x256" href="./assets/images/ios/256.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="./assets/images/ios/512.png">
-    <link rel="apple-touch-icon" sizes="1024x1024" href="./assets/images/ios/1024.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="./assets/images/android/android-launchericon-48-48.png">
-    <link rel="icon" type="image/png" sizes="72x72" href="./assets/images/android/android-launchericon-72-72.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./assets/images/android/android-launchericon-96-96.png">
-    <link rel="icon" type="image/png" sizes="144x144" href="./assets/images/android/android-launchericon-144-144.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./assets/images/android/android-launchericon-192-192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="./assets/images/android/android-launchericon-512-512.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/ios/32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/ios/16.png">
+    <link rel="manifest" href="/easy-survey/manifest.json">
+    <link rel="apple-touch-icon" sizes="32x32" href="/easy-survey/assets/images/ios/32.png">
+    <link rel="apple-touch-icon" sizes="58x58" href="/easy-survey/assets/images/ios/58.png">
+    <link rel="apple-touch-icon" sizes="64x64" href="/easy-survey/assets/images/ios/64.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/easy-survey/assets/images/ios/76.png">
+    <link rel="apple-touch-icon" sizes="80x80" href="/easy-survey/assets/images/ios/80.png">
+    <link rel="apple-touch-icon" sizes="87x87" href="/easy-survey/assets/images/ios/87.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/easy-survey/assets/images/ios/114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/easy-survey/assets/images/ios/120.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="/easy-survey/assets/images/ios/128.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/easy-survey/assets/images/ios/152.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="/easy-survey/assets/images/ios/167.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/easy-survey/assets/images/ios/180.png">
+    <link rel="apple-touch-icon" sizes="256x256" href="/easy-survey/assets/images/ios/256.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="/easy-survey/assets/images/ios/512.png">
+    <link rel="apple-touch-icon" sizes="1024x1024" href="/easy-survey/assets/images/ios/1024.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/easy-survey/assets/images/android/android-launchericon-48-48.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="/easy-survey/assets/images/android/android-launchericon-72-72.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/easy-survey/assets/images/android/android-launchericon-96-96.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="/easy-survey/assets/images/android/android-launchericon-144-144.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/easy-survey/assets/images/android/android-launchericon-192-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/easy-survey/assets/images/android/android-launchericon-512-512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/easy-survey/assets/images/ios/32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/easy-survey/assets/images/ios/16.png">
     <link rel="stylesheet" href="./assets/css/general.css" data-default=true>
     <link rel="stylesheet" href="./assets/css/navbar.css" data-default=true>
     <link rel="stylesheet" href="./assets/css/footer.css" data-default=true>
