--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     <link rel="icon" type="image/png" sizes="512x512" href="/easy-survey/assets/images/android/android-launchericon-512-512.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/easy-survey/assets/images/ios/32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/easy-survey/assets/images/ios/16.png">
-    <link rel="stylesheet" href="./assets/css/general.css" data-default=true>
-    <link rel="stylesheet" href="./assets/css/navbar.css" data-default=true>
-    <link rel="stylesheet" href="./assets/css/footer.css" data-default=true>
-    <link rel="stylesheet" href="./assets/css/loader.css" data-default=true>
+    <link rel="stylesheet" href="/easy-survey/assets/css/general.css" data-default=true>
+    <link rel="stylesheet" href="/easy-survey/assets/css/navbar.css" data-default=true>
+    <link rel="stylesheet" href="/easy-survey/assets/css/footer.css" data-default=true>
+    <link rel="stylesheet" href="/easy-survey/assets/css/loader.css" data-default=true>
 </head>
 <body>
     <button id="install" class="button">Download</button>
     <main id="app"></main>
-    <script src="./js/handle-scroll.js" data-default="true"></script>
-    <script type="module" src="./router.js" data-default="true"></script>
-    <script src="./js/main.js" data-default="true"></script>
-    <script src="./js/pwa.js" data-default="true"></script>
+    <script src="/easy-survey/js/handle-scroll.js" data-default="true"></script>
+    <script type="module" src="/easy-survey/router.js" data-default="true"></script>
+    <script src="/easy-survey/js/main.js" data-default="true"></script>
+    <script src="/easy-survey/js/pwa.js" data-default="true"></script>
 </body>
 </html>
