--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/easy-survey/assets/images/ios/32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/easy-survey/assets/images/ios/16.png">
     <link rel="stylesheet" href="/easy-survey/assets/css/general.css" data-default=true>
+    <link rel="stylesheet" href="/easy-survey/assets/css/alert.css" data-default=true>
     <link rel="stylesheet" href="/easy-survey/assets/css/navbar.css" data-default=true>
     <link rel="stylesheet" href="/easy-survey/assets/css/footer.css" data-default=true>
     <link rel="stylesheet" href="/easy-survey/assets/css/loader.css" data-default=true>
@@ -41,6 +42,7 @@
 <body>
     <button id="install" class="button">Download</button>
     <main id="app"></main>
+    <script src="/easy-survey/js/alert.js" data-default="true"></script>
     <script src="/easy-survey/js/handle-scroll.js" data-default="true"></script>
     <script type="module" src="/easy-survey/router.js" data-default="true"></script>
     <script src="/easy-survey/js/main.js" data-default="true"></script>
